<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Juego_Ventana">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/piedra"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/piedra"
            android:contentDescription="@string/Piedra" />

        <ImageView
            android:id="@+id/papel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_margin="20dp"
            android:src="@drawable/papel"
            android:contentDescription="@string/Papel" />

        <ImageView
            android:id="@+id/tijeras"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/tijeras"
            android:contentDescription="@string/Tijeras" />
    </LinearLayout>

    <Button
        android:id="@+id/Elegir"
        android:layout_width="350dp"
        android:layout_height="60dp"
        app:layout_constraintBottom_toTopOf="@+id/Turno"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/Elegir"
        android:textColor="@color/black"
        android:textSize="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/Turno"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:textColor="@color/black"
        android:text="@string/Turno"
        android:textAlignment="center"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <TextView
        android:id="@+id/VicDer"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/VicDer"
        android:textAlignment="center"
        android:textSize="38sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>